k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: quittercr.azurecr.io/frontend:v0.1.5
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 500Mi
            cpu: 500m
        ports:
        - containerPort: 4200
